tests/paczka1/fuzzy1/60483760.err
Error in line 4: A503 A438 23,57
Error in line 17: iqZ A438 18,6
